# parapet-ingress-controller

./: .dockerignore  .editorconfig  .gitignore  CACHE.md  CLAUDE.md  CORAZA.md  Dockerfile  Dockerfile.edge  Dockerfile.edge-controlplane  EDGE-AUTOTRUST.md  EDGE.md  Makefile  RATELIMIT.md  README.md  SKILL.md  SPEC.md  WAF.md  WEBSOCKET.md  cloudbuild.release.yaml  cloudbuild.yaml  controller.go  controller_coraza.go  controller_coraza_test.go  controller_endpoint_test.go  controller_firstreload_test.go  controller_ratelimit.go  controller_ratelimit_test.go  controller_reload_test.go  controller_test.go  controller_transform.go  controller_transform_test.go  controller_waf.go  controller_waf_test.go  controller_watch_test.go  debounce.go  featurelabel.go  go.mod  go.sum  ingress.go  k8s.go  (+10 more)
.github/workflows/: build.yaml  edge-build.yaml  edge-e2e.yaml  go-build.yaml  go-release.yaml  go-test.yaml  qodana.yaml  release.yaml  rust-build-profiling.yaml  rust-build.yaml  rust-release.yaml  rust-test.yaml  test.yaml
cacherule/: cacherule.go  ruleset.go  ruleset_test.go
caid/: caid.go  caid_test.go
cert/: table.go  table_test.go
cmd/edge-controlplane/: converge.go  generation_test.go  main.go  revoke.go  revoke_test.go
cmd/edge-proxy/: main.go  main_test.go
cmd/parapet-ingress-controller/: config.go  geo_headers_test.go  main.go  transform_order_test.go  wsnormalize.go  (+2 more)
conformance/: README.md  waf-cel-corpus.md
corazawaf/: corazawaf.go  corazawaf_test.go  crs_test.go
debounce/: debounce.go  debounce_test.go
deploy/: 00-namespace.yaml  01-ingressclass.yaml  01-serviceaccount.yaml  02-service.yaml  03-service-pods.yaml  README.md  daemonset.yaml  deploy.yaml  deployment.yaml  kustomization.yaml  role-binding.yaml  role-cluster.yaml  role-namespaced.yaml  role.yaml  service-account.yaml  service.yaml
edge/: cache_override.go  cache_override_test.go  cacheegress.go  cacheegress_test.go  cacheoverriderefresh.go  cachestatus.go  cachestatus_test.go  cachestorage.go  cachestorage_disk_other.go  cachestorage_disk_unix.go  cachestorage_test.go  cachetotal.go  cachetotal_test.go  certstore.go  certstore_test.go  clientcert.go  clientcert_test.go  coraza.go  coraza_test.go  corazarefresh.go  cp.go  cp_signal_test.go  cp_test.go  events.go  events_test.go  forward.go  forward_http2_test.go  forward_test.go  forward_tuning_test.go  gatedhosts.go  gatedhosts_test.go  gatedhostsrefresh.go  hosts.go  hosts_test.go  hostsrefresh.go  import_boundary_test.go  metrics.go  metrics_test.go  metricspush.go  metricspush_test.go  (+29 more)
edgecp/: authz.go  ca.go  ca_test.go  cachereload.go  cachestore.go  cachestore_test.go  caid_join_test.go  certstore.go  corazareload.go  corazastore.go  corazastore_test.go  etag_test.go  events.go  events_test.go  featurelabel.go  gatedhoststore.go  gatedhoststore_test.go  generation_test.go  hoststore.go  hoststore_test.go  ingressreload.go  ingressreload_test.go  integration_test.go  issuance.go  issuance_test.go  metrics.go  metrics_test.go  metricstore.go  metricstore_test.go  purgeserver_test.go  purgestore.go  purgestore_test.go  ratelimitreload.go  ratelimitstore.go  ratelimitstore_test.go  registry_test.go  reload.go  reload_test.go  resourceversion.go  resourceversion_test.go  (+14 more)
geoip/: cache.go  geoip_test.go
go/: CLAUDE.md  Dockerfile  Dockerfile.edge  Dockerfile.edge-controlplane  controller.go  controller_endpoint_test.go  controller_reload_test.go  controller_test.go  controller_waf.go  controller_waf_test.go  go.mod  go.sum  retry.go
hack/: go.patch
k8s/: cluster.go  fs.go  k8s.go
metric/: backendconns.go  cache.go  cache_test.go  coraza.go  coraza_test.go  host.go  host_test.go  hostratelimit.go  metric_bench_test.go  metric_test.go  rejected_test.go  reload.go  requests.go  trust.go  trust_bench_test.go  trust_test.go  waf.go  wafevent.go  ws.go
mux/: mux.go  path.go  path_test.go
plugin/: auth.go  auth_test.go  corazazone.go  corazazone_test.go  plugin.go  plugin_test.go  plugins.go  ratelimitzone.go  ratelimitzone_test.go  trace.go  trace_test.go  transform.go  transform_test.go  waf.go  waf_test.go  zone.go
proxy/: attr.go  autoh2c.go  autoh2c_test.go  buffer.go  buffer_test.go  dialer.go  dialer_test.go  gateway.go  proxy.go  proxy_test.go  transport.go  wsh2c.go  wsh2c_test.go  wstunnel.go  wstunnel_test.go
ratelimitrule/: filter_test.go  fixedwindow.go  fixedwindow_test.go  limiter.go  limiter_bench_test.go  limiter_test.go  ratelimitrule.go  ratelimitrule_test.go  slidingwindow.go  slidingwindow_test.go
route/: badaddr.go  badaddr_test.go  bench_test.go  rrlb.go  rrlb_test.go  table.go  table_test.go
rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.edge  HEAP_PROFILING.md  PHASE0_FINDINGS.md  PHASE3.md  PHASE5.md  README.md
rust/bench/: load.js  run.sh
rust/controller/: Cargo.toml
rust/controller/src/: cert.rs  config.rs  lib.rs  main.rs  reconcile.rs  router.rs  shared.rs  waf.rs
rust/controller/src/k8s/: cluster.rs  fs.rs  mod.rs
rust/controller/src/proxy/: allocmetrics.rs  cert.rs  limit.rs  metrics.rs  mod.rs  predefined.rs  procmetrics.rs  ratelimit.rs  server.rs
rust/controller/src/route/: badaddr.rs  mod.rs  rrlb.rs  table.rs
rust/controller/tests/: healthz.rs  host_concurrency_release.rs  websocket.rs
rust/edge/: Cargo.toml
rust/edge/src/: certstore.rs  cp.rs  diskcache.rs  main.rs  proxy.rs  refresh.rs  tls.rs  waf.rs  wafrefresh.rs
rust/spike/: Cargo.toml  verify.sh
rust/spike/src/: certs.rs  main.rs  routing.rs  upstreams.rs
state/: bench_test.go  hack.go  not_hack.go  state.go  state_test.go
tools/: ruleset-editor.html  waf-rule-editor.html
transformrule/: transformrule.go  transformrule_test.go
trust/: bench_test.go  clientcert_prompt_test.go  e2e_test.go  trust.go  trust_test.go  waitready_test.go
trustcidr/: trustcidr.go  trustcidr_test.go
wafclaim/: wafclaim.go
wafevent/: flusher.go  flusher_test.go  handler.go  handler_test.go  wafevent.go  wafevent_test.go
wafrule/: wafrule.go  wafrule_test.go
wsh2/: copy.go  copy_test.go  wsh2.go  wsh2_test.go
(+83 files in other folders)
