# Member of the ../Cargo.toml workspace. On the openssl backend (same as the
# controller), so pingora's TLS feature unifies cleanly — no boringssl, no
# separate workspace (unlike the abandoned keyless design). See ../../EDGE.md.
[package]
name = "parapet-edge"
version = "0.0.0"
edition = "2021"
publish = false

# Out-of-cluster Pingora edge proxy. Terminates public TLS *locally* with cert+key
# fetched from the in-cluster control plane (`GET /v1/certs/{sni}` over HTTPS +
# bearer token), cached in memory and refreshed on a timer. Forwards to parapet.
[dependencies]
# openssl backend matches the controller, so controller's cert types unify cleanly.
# `cache` adds pingora-cache (HTTP response cache); we implement a disk-backed
# Storage in src/diskcache.rs (pingora ships only an in-memory MemCache).
pingora = { version = "0.8", features = ["proxy", "openssl", "cache"] }
# Reuse the controller's cert table + LoadedCert::parsed() (needs the `proxy` feature).
controller = { path = "../controller", package = "parapet-ingress-controller", features = ["proxy"] }

async-trait = "0.1"
# fs + io-util back the disk cache's async file IO (diskcache.rs).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
    "time",
    "fs",
    "io-util",
] }
arc-swap = "1"
# HTTPS client to the control plane (rustls so it doesn't pull a second TLS lib).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
# Self-signed fallback cert for unknown SNI (mirrors controller proxy/cert.rs).
rcgen = "0.13"
# Response-body bytes for WAF block responses (pingora's write_response_body).
bytes = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# jemalloc as the global allocator (set in main.rs), same rationale as the
# controller: glibc retains freed memory in per-thread arenas and seldom returns
# it to the OS, so under Pingora's many-worker-thread H2 load RSS ratchets upward
# for the process lifetime. jemalloc fragments less and purges idle pages back to
# the OS on a decay timer. `unprefixed_malloc_on_supported_platforms` routes the
# C deps (OpenSSL) through jemalloc too; `background_threads` runs the purge off
# the request path. Built on Linux/macOS (gated to non-msvc in code).
tikv-jemallocator = { version = "0.6", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }

[[bin]]
name = "parapet-edge"
path = "src/main.rs"
