[package]
name = "spike"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
pingora = { version = "0.8", features = ["proxy", "openssl"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync"] }
arc-swap = "1"

# test upstreams + self-signed cert generation for the spike harness
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
http = "1"
bytes = "1"
rcgen = "0.13"
